// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loaded approved role based request state 1`] = `
.c1 {
  box-sizing: border-box;
  max-width: 860px;
  min-width: 515px;
  margin-right: 32px;
  width: 100%;
  flex: 1 1 auto;
}

.c9 {
  box-sizing: border-box;
}

.c14 {
  box-sizing: border-box;
  padding: 24px;
  padding-top: 0px;
  background-color: #222C59;
  border-bottom-right-radius: 4px;
  border-bottom-left-radius: 4px;
}

.c17 {
  box-sizing: border-box;
  margin-left: 16px;
  margin-right: 8px;
  padding: 3px;
  background-color: #344179;
  border-radius: 50%;
}

.c21 {
  box-sizing: border-box;
  margin-left: 16px;
  margin-right: 8px;
  padding: 3px;
  background-color: #00BFA5;
  border-radius: 50%;
}

.c23 {
  box-sizing: border-box;
  margin-top: 16px;
  border: 1px solid;
  border-color: #0C143D;
}

.c26 {
  box-sizing: border-box;
  padding: 16px;
  background-color: #344179;
}

.c28 {
  box-sizing: border-box;
  min-width: 120px;
  flex: 0 1 260px;
}

.c35 {
  box-sizing: border-box;
  margin-left: 4px;
  margin-top: 16px;
}

.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  margin-left: 16px;
  width: 60px;
}

.c13:hover,
.c13:focus {
  background: rgba(255,255,255,0.07);
}

.c13:active {
  background: rgba(255,255,255,0.13);
}

.c13:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c27 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 24px;
}

.c27:hover,
.c27:focus {
  background: #B29DFF;
}

.c27:active {
  background: #C5B6FF;
}

.c27:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 8px;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
}

.c20 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 8px;
}

.c25 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 12px;
  line-height: 24px;
  margin: 0px;
}

.c30 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-right: 8px;
}

.c32 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 16px;
}

.c36 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  color: rgba(255,255,255,0.72);
}

.c18 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: rgba(255,255,255,0.54);
}

.c22 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: #FFFFFF;
}

.c10 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: rgba(255,255,255,0.07);
  color: #FFFFFF;
  font-weight: 400;
  margin-right: 4px;
}

.c5 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  margin-right: 16px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  background: #00BFA5;
  color: #000000;
  font-size: 10px;
}

.c33 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  padding: 0px;
  background: #00BFA5;
  color: #000000;
  width: 10px;
  font-size: 10px;
}

.c34 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  padding: 0px;
  background: #FFAB00;
  color: #000000;
  width: 10px;
  font-size: 10px;
}

.c0 {
  box-sizing: border-box;
  display: flex;
}

.c4 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c6 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  flex-wrap: wrap;
}

.c12 {
  box-sizing: border-box;
  flex: 1;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  flex-wrap: wrap-reverse;
}

.c16 {
  box-sizing: border-box;
  padding-top: 16px;
  display: flex;
  align-items: center;
}

.c19 {
  box-sizing: border-box;
  display: flex;
  align-items: baseline;
}

.c24 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  background-color: #0C143D;
  display: flex;
  align-items: baseline;
}

.c15 {
  position: absolute;
  height: calc(100% - 24px);
  width: 2px;
  top: 0;
  left: 55px;
  border-left: 2px solid rgba(255,255,255,0.07);
}

.c2 {
  box-sizing: border-box;
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px rgba(0,0,0,0.14),0px 1px 3px rgba(0,0,0,0.12);
}

.c3 {
  box-sizing: border-box;
  padding: 16px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  display: flex;
  background: #344179;
}

.c31 {
  box-sizing: border-box;
  margin-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  border: 1px solid;
  border-radius: 2px;
  border-color: #222C59;
  display: flex;
  align-items: center;
  justify-content: space-between;
  background: rgba(255,255,255,0.07);
}

.c29 {
  box-sizing: border-box;
  margin-bottom: 16px;
  padding-bottom: 16px;
  border-bottom: 1px solid;
  display: flex;
  border-color: rgba(255,255,255,0.13);
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      width="100%"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <span
              class="c5"
              font-size="0"
              font-weight="bold"
              kind="success"
              style="font-weight: bold;"
            >
              APPROVED
            </span>
            <div
              class="c6"
            >
              <div
                class="c7"
                style="max-width: 120px;"
                title="Sam"
              >
                Sam
              </div>
              <div
                class="c8"
                style="flex-shrink: 0; white-space: nowrap;"
              >
                is requesting roles:
              </div>
              <div
                class="c9"
              >
                <div
                  class="c10"
                  kind="secondary"
                >
                  admin
                </div>
                <div
                  class="c10"
                  kind="secondary"
                >
                  kaco
                </div>
                <div
                  class="c10"
                  kind="secondary"
                >
                  ziuzzow
                </div>
              </div>
              <div
                class="c11"
              >
                for 
                24 hours
              </div>
            </div>
          </div>
          <div
            class="c12"
          >
            <button
              class="c13"
              kind="border"
              width="60px"
            >
              Delete
            </button>
          </div>
        </div>
        <div
          class="c14"
          style="position: relative;"
        >
          <div
            class="c15"
          />
          <div
            class="c16"
            style="position: relative;"
          >
            <div
              class="c17"
              style="display: flex;"
            >
              <span
                class="c18 icon icon-chevroncircledown"
                color="text.muted"
              >
                <svg
                  fill="currentColor"
                  height="26"
                  viewBox="0 0 24 24"
                  width="26"
                >
                  <path
                    d="M8.78033 9.96967C8.48744 9.67678 8.01256 9.67678 7.71967 9.96967C7.42678 10.2626 7.42678 10.7374 7.71967 11.0303L11.4697 14.7803C11.7626 15.0732 12.2374 15.0732 12.5303 14.7803L16.2803 11.0303C16.5732 10.7374 16.5732 10.2626 16.2803 9.96967C15.9874 9.67678 15.5126 9.67678 15.2197 9.96967L12 13.1893L8.78033 9.96967Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="c19"
            >
              <div
                class="c20"
                style="flex: 1 1 0px;"
              >
                Sam
              </div>
              <div
                class="c11"
              >
                submitted
                 this request 
                2 hours ago
              </div>
            </div>
          </div>
          <div
            class="c9"
          >
            <div
              class="c16"
              style="position: relative;"
            >
              <div
                class="c21"
                style="display: flex;"
              >
                <span
                  class="c22 icon icon-circlecheck"
                  color="light"
                >
                  <svg
                    fill="currentColor"
                    height="26"
                    viewBox="0 0 24 24"
                    width="26"
                  >
                    <path
                      d="M16.2803 10.2803C16.5732 9.98744 16.5732 9.51256 16.2803 9.21967C15.9874 8.92678 15.5126 8.92678 15.2197 9.21967L10.5 13.9393L8.78033 12.2197C8.48744 11.9268 8.01256 11.9268 7.71967 12.2197C7.42678 12.5126 7.42678 12.9874 7.71967 13.2803L9.96967 15.5303C10.2626 15.8232 10.7374 15.8232 11.0303 15.5303L16.2803 10.2803Z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="c19"
              >
                <div
                  class="c20"
                  style="flex: 1 1 0px;"
                >
                  alice
                </div>
                <div
                  class="c11"
                >
                  approved
                   this request 
                  26 hours ago
                </div>
              </div>
            </div>
            <div
              class="c23"
              style="position: relative;"
            >
              <div
                class="c24"
              >
                <div
                  class="c20"
                >
                  alice
                </div>
                <div
                  class="c25"
                >
                  26 hours ago
                </div>
              </div>
              <div
                class="c26"
              >
                Approving for developer role not admin. Admins access is not needed for this request.
              </div>
            </div>
            <div
              class="c16"
              style="position: relative;"
            >
              <div
                class="c21"
                style="display: flex;"
              >
                <span
                  class="c22 icon icon-circlecheck"
                  color="light"
                >
                  <svg
                    fill="currentColor"
                    height="26"
                    viewBox="0 0 24 24"
                    width="26"
                  >
                    <path
                      d="M16.2803 10.2803C16.5732 9.98744 16.5732 9.51256 16.2803 9.21967C15.9874 8.92678 15.5126 8.92678 15.2197 9.21967L10.5 13.9393L8.78033 12.2197C8.48744 11.9268 8.01256 11.9268 7.71967 12.2197C7.42678 12.5126 7.42678 12.9874 7.71967 13.2803L9.96967 15.5303C10.2626 15.8232 10.7374 15.8232 11.0303 15.5303L16.2803 10.2803Z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="c19"
              >
                <div
                  class="c20"
                  style="flex: 1 1 0px;"
                >
                  test-long-user-name@testing.com
                </div>
                <div
                  class="c11"
                >
                  approved
                   this request 
                  1 minute ago
                </div>
              </div>
            </div>
            
          </div>
        </div>
      </div>
      <button
        class="c27"
        kind="primary"
      >
        assume roles
      </button>
    </div>
    <div
      class="c28"
    >
      <div
        class="c29"
      >
        <div
          class="c30"
        >
          Reviewers
        </div>
      </div>
      <div
        class="c31"
      >
        <div
          class="c32"
          style="white-space: nowrap; max-width: 200px;"
          title="alice"
        >
          alice
        </div>
        <span
          class="c33"
          font-size="0"
          font-weight="bold"
          kind="success"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c31"
      >
        <div
          class="c32"
          style="white-space: nowrap; max-width: 200px;"
          title="bob"
        >
          bob
        </div>
        <span
          class="c34"
          font-size="0"
          font-weight="bold"
          kind="warning"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c31"
      >
        <div
          class="c32"
          style="white-space: nowrap; max-width: 200px;"
          title="test-long-user-name@testing.com"
        >
          test-long-user-name@testing.com
        </div>
        <span
          class="c33"
          font-size="0"
          font-weight="bold"
          kind="success"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c35"
      >
        <div
          class="c36"
          color="text.slightlyMuted"
        >
          Thresholds: 
          Default
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`loaded denied role based request state 1`] = `
.c1 {
  box-sizing: border-box;
  max-width: 860px;
  min-width: 515px;
  margin-right: 32px;
  width: 100%;
  flex: 1 1 auto;
}

.c9 {
  box-sizing: border-box;
}

.c14 {
  box-sizing: border-box;
  padding: 24px;
  padding-top: 0px;
  background-color: #222C59;
  border-bottom-right-radius: 4px;
  border-bottom-left-radius: 4px;
}

.c17 {
  box-sizing: border-box;
  margin-left: 16px;
  margin-right: 8px;
  padding: 3px;
  background-color: #344179;
  border-radius: 50%;
}

.c21 {
  box-sizing: border-box;
  margin-top: 16px;
  border: 1px solid;
  border-color: #0C143D;
}

.c24 {
  box-sizing: border-box;
  padding: 16px;
  background-color: #344179;
}

.c25 {
  box-sizing: border-box;
  margin-left: 16px;
  margin-right: 8px;
  padding: 3px;
  background-color: #FF6257;
  border-radius: 50%;
}

.c27 {
  box-sizing: border-box;
  min-width: 120px;
  flex: 0 1 260px;
}

.c34 {
  box-sizing: border-box;
  margin-left: 4px;
  margin-top: 16px;
}

.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  margin-left: 16px;
  width: 60px;
}

.c13:hover,
.c13:focus {
  background: rgba(255,255,255,0.07);
}

.c13:active {
  background: rgba(255,255,255,0.13);
}

.c13:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 8px;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
}

.c20 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 8px;
}

.c23 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 12px;
  line-height: 24px;
  margin: 0px;
}

.c29 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-right: 8px;
}

.c31 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 16px;
}

.c35 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  color: rgba(255,255,255,0.72);
}

.c18 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: rgba(255,255,255,0.54);
}

.c26 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: #FFFFFF;
}

.c10 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: rgba(255,255,255,0.07);
  color: #FFFFFF;
  font-weight: 400;
  margin-right: 4px;
}

.c5 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  margin-right: 16px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  background: #FF6257;
  color: #000000;
  font-size: 10px;
}

.c32 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  padding: 0px;
  background: #9F85FF;
  color: #000000;
  width: 10px;
  font-size: 10px;
}

.c33 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  padding: 0px;
  background: #FFAB00;
  color: #000000;
  width: 10px;
  font-size: 10px;
}

.c0 {
  box-sizing: border-box;
  display: flex;
}

.c4 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c6 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  flex-wrap: wrap;
}

.c12 {
  box-sizing: border-box;
  flex: 1;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  flex-wrap: wrap-reverse;
}

.c16 {
  box-sizing: border-box;
  padding-top: 16px;
  display: flex;
  align-items: center;
}

.c19 {
  box-sizing: border-box;
  display: flex;
  align-items: baseline;
}

.c22 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  background-color: #0C143D;
  display: flex;
  align-items: baseline;
}

.c15 {
  position: absolute;
  height: calc(100% - 24px);
  width: 2px;
  top: 0;
  left: 55px;
  border-left: 2px solid rgba(255,255,255,0.07);
}

.c2 {
  box-sizing: border-box;
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px rgba(0,0,0,0.14),0px 1px 3px rgba(0,0,0,0.12);
}

.c3 {
  box-sizing: border-box;
  padding: 16px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  display: flex;
  background: #344179;
}

.c30 {
  box-sizing: border-box;
  margin-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  border: 1px solid;
  border-radius: 2px;
  border-color: #222C59;
  display: flex;
  align-items: center;
  justify-content: space-between;
  background: rgba(255,255,255,0.07);
}

.c28 {
  box-sizing: border-box;
  margin-bottom: 16px;
  padding-bottom: 16px;
  border-bottom: 1px solid;
  display: flex;
  border-color: rgba(255,255,255,0.13);
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      width="100%"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <span
              class="c5"
              font-size="0"
              font-weight="bold"
              kind="danger"
              style="font-weight: bold;"
            >
              DENIED
            </span>
            <div
              class="c6"
            >
              <div
                class="c7"
                style="max-width: 120px;"
                title="Sam"
              >
                Sam
              </div>
              <div
                class="c8"
                style="flex-shrink: 0; white-space: nowrap;"
              >
                is requesting roles:
              </div>
              <div
                class="c9"
              >
                <div
                  class="c10"
                  kind="secondary"
                >
                  admin
                </div>
                <div
                  class="c10"
                  kind="secondary"
                >
                  ruhh
                </div>
              </div>
              <div
                class="c11"
              >
                for 
                20 hours
              </div>
            </div>
          </div>
          <div
            class="c12"
          >
            <button
              class="c13"
              kind="border"
              width="60px"
            >
              Delete
            </button>
          </div>
        </div>
        <div
          class="c14"
          style="position: relative;"
        >
          <div
            class="c15"
          />
          <div
            class="c16"
            style="position: relative;"
          >
            <div
              class="c17"
              style="display: flex;"
            >
              <span
                class="c18 icon icon-chevroncircledown"
                color="text.muted"
              >
                <svg
                  fill="currentColor"
                  height="26"
                  viewBox="0 0 24 24"
                  width="26"
                >
                  <path
                    d="M8.78033 9.96967C8.48744 9.67678 8.01256 9.67678 7.71967 9.96967C7.42678 10.2626 7.42678 10.7374 7.71967 11.0303L11.4697 14.7803C11.7626 15.0732 12.2374 15.0732 12.5303 14.7803L16.2803 11.0303C16.5732 10.7374 16.5732 10.2626 16.2803 9.96967C15.9874 9.67678 15.5126 9.67678 15.2197 9.96967L12 13.1893L8.78033 9.96967Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="c19"
            >
              <div
                class="c20"
                style="flex: 1 1 0px;"
              >
                Sam
              </div>
              <div
                class="c11"
              >
                submitted
                 this request 
                35 minutes ago
              </div>
            </div>
          </div>
          <div
            class="c21"
            style="position: relative;"
          >
            <div
              class="c22"
            >
              <div
                class="c20"
              >
                Sam
              </div>
              <div
                class="c23"
              >
                35 minutes ago
              </div>
            </div>
            <div
              class="c24"
            >
              Some short request reason
            </div>
          </div>
          <div
            class="c9"
          >
            <div
              class="c16"
              style="position: relative;"
            >
              <div
                class="c25"
                style="display: flex;"
              >
                <span
                  class="c26 icon icon-circlecross"
                  color="light"
                >
                  <svg
                    fill="currentColor"
                    height="26"
                    viewBox="0 0 24 24"
                    width="26"
                  >
                    <path
                      d="M15.5303 8.46967C15.8232 8.76256 15.8232 9.23744 15.5303 9.53033L13.0607 12L15.5303 14.4697C15.8232 14.7626 15.8232 15.2374 15.5303 15.5303C15.2374 15.8232 14.7626 15.8232 14.4697 15.5303L12 13.0607L9.53033 15.5303C9.23744 15.8232 8.76256 15.8232 8.46967 15.5303C8.17678 15.2374 8.17678 14.7626 8.46967 14.4697L10.9393 12L8.46967 9.53033C8.17678 9.23744 8.17678 8.76256 8.46967 8.46967C8.76256 8.17678 9.23744 8.17678 9.53033 8.46967L12 10.9393L14.4697 8.46967C14.7626 8.17678 15.2374 8.17678 15.5303 8.46967Z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="c19"
              >
                <div
                  class="c20"
                  style="flex: 1 1 0px;"
                >
                  alice
                </div>
                <div
                  class="c11"
                >
                  denied
                   this request 
                  26 hours ago
                </div>
              </div>
            </div>
            <div
              class="c21"
              style="position: relative;"
            >
              <div
                class="c22"
              >
                <div
                  class="c20"
                >
                  alice
                </div>
                <div
                  class="c23"
                >
                  26 hours ago
                </div>
              </div>
              <div
                class="c24"
              >
                Not today
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c27"
    >
      <div
        class="c28"
      >
        <div
          class="c29"
        >
          Reviewers
        </div>
      </div>
      <div
        class="c30"
      >
        <div
          class="c31"
          style="white-space: nowrap; max-width: 200px;"
          title="alice"
        >
          alice
        </div>
        <span
          class="c32"
          font-size="0"
          font-weight="bold"
          kind="error"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c30"
      >
        <div
          class="c31"
          style="white-space: nowrap; max-width: 200px;"
          title="bob"
        >
          bob
        </div>
        <span
          class="c33"
          font-size="0"
          font-weight="bold"
          kind="warning"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c34"
      >
        <div
          class="c35"
          color="text.slightlyMuted"
        >
          Thresholds: 
          Default
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`loaded pending role based request state 1`] = `
.c1 {
  box-sizing: border-box;
  max-width: 860px;
  min-width: 515px;
  margin-right: 32px;
  width: 100%;
  flex: 1 1 auto;
}

.c9 {
  box-sizing: border-box;
}

.c14 {
  box-sizing: border-box;
  padding: 24px;
  padding-top: 0px;
  background-color: #222C59;
  border-bottom-right-radius: 4px;
  border-bottom-left-radius: 4px;
}

.c17 {
  box-sizing: border-box;
  margin-left: 16px;
  margin-right: 8px;
  padding: 3px;
  background-color: #344179;
  border-radius: 50%;
}

.c21 {
  box-sizing: border-box;
  margin-top: 16px;
  border: 1px solid;
  border-color: #0C143D;
}

.c24 {
  box-sizing: border-box;
  padding: 16px;
  background-color: #344179;
}

.c25 {
  box-sizing: border-box;
  margin-top: 48px;
  border: 1px solid;
  border-color: #0C143D;
}

.c26 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  background-color: #0C143D;
}

.c28 {
  box-sizing: border-box;
  margin-bottom: 24px;
  width: 200px;
}

.c31 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c34 {
  box-sizing: border-box;
  min-width: 120px;
  flex: 0 1 260px;
}

.c40 {
  box-sizing: border-box;
  margin-left: 4px;
  margin-top: 16px;
}

.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  margin-left: 16px;
  width: 60px;
}

.c13:hover,
.c13:focus {
  background: rgba(255,255,255,0.07);
}

.c13:active {
  background: rgba(255,255,255,0.13);
}

.c13:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c33 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c33:hover,
.c33:focus {
  background: #B29DFF;
}

.c33:active {
  background: #C5B6FF;
}

.c33:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 8px;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
}

.c20 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 8px;
}

.c23 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 12px;
  line-height: 24px;
  margin: 0px;
}

.c27 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-right: 16px;
}

.c36 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-right: 8px;
}

.c38 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 16px;
}

.c41 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  color: rgba(255,255,255,0.72);
}

.c18 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: rgba(255,255,255,0.54);
}

.c10 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: rgba(255,255,255,0.07);
  color: #FFFFFF;
  font-weight: 400;
  margin-right: 4px;
}

.c29 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 4px;
}

.c5 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  margin-right: 16px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  background: #FFAB00;
  color: #000000;
  font-size: 10px;
}

.c39 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  padding: 0px;
  background: #FFAB00;
  color: #000000;
  width: 10px;
  font-size: 10px;
}

.c0 {
  box-sizing: border-box;
  display: flex;
}

.c4 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c6 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  flex-wrap: wrap;
}

.c12 {
  box-sizing: border-box;
  flex: 1;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  flex-wrap: wrap-reverse;
}

.c16 {
  box-sizing: border-box;
  padding-top: 16px;
  display: flex;
  align-items: center;
}

.c19 {
  box-sizing: border-box;
  display: flex;
  align-items: baseline;
}

.c22 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  background-color: #0C143D;
  display: flex;
  align-items: baseline;
}

.c30 .react-select-container {
  box-sizing: border-box;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: #FFFFFF;
  background-color: transparent;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c30 .react-select__control {
  outline: none;
  min-height: 40px;
  height: fit-content;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  background-color: transparent;
  box-shadow: none;
}

.c30 .react-select__control .react-select__dropdown-indicator {
  color: rgba(255,255,255,0.54);
}

.c30 .react-select__control:hover,
.c30 .react-select__control:focus,
.c30 .react-select__control:active {
  border: 1px solid rgba(255,255,255,0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c30 .react-select__control:hover .react-select__dropdown-indicator,
.c30 .react-select__control:focus .react-select__dropdown-indicator,
.c30 .react-select__control:active .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c30 .react-select__control .react-select__indicator:hover,
.c30 .react-select__control .react-select__dropdown-indicator:hover,
.c30 .react-select__control .react-select__indicator:focus,
.c30 .react-select__control .react-select__dropdown-indicator:focus,
.c30 .react-select__control .react-select__indicator:active,
.c30 .react-select__control .react-select__dropdown-indicator:active {
  color: #FFFFFF;
}

.c30 .react-select__control--is-focused {
  border-color: rgba(255,255,255,0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c30 .react-select__control--is-focused .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c30 .react-select__single-value {
  color: #FFFFFF;
}

.c30 .react-select__placeholder {
  color: rgba(255,255,255,0.54);
}

.c30 .react-select__multi-value {
  background-color: rgba(255,255,255,0.13);
}

.c30 .react-select__multi-value .react-select__multi-value__label {
  color: #FFFFFF;
  padding: 0 6px;
}

.c30 .react-select__multi-value .react-select__multi-value__remove {
  color: #FFFFFF;
}

.c30 .react-select__multi-value .react-select__multi-value__remove:hover {
  background-color: rgba(255,255,255,0.07);
  color: #FF6257;
}

.c30 .react-select__option:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c30 .react-select__option--is-focused {
  background-color: rgba(255,255,255,0.07);
}

.c30 .react-select__option--is-focused:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c30 .react-select__option--is-selected {
  background-color: rgba(255,255,255,0.13);
  color: inherit;
  font-weight: 500;
}

.c30 .react-select__option--is-selected:hover {
  background-color: rgba(255,255,255,0.13);
}

.c30 .react-select__clear-indicator {
  color: rgba(255,255,255,0.72);
}

.c30 .react-select__clear-indicator:hover,
.c30 .react-select__clear-indicator:focus {
  background-color: rgba(255,255,255,0.07);
}

.c30 .react-select__clear-indicator:hover svg,
.c30 .react-select__clear-indicator:focus svg {
  color: #FF6257;
}

.c30 .react-select__menu {
  margin-top: 0px;
  background-color: #344179;
  box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);
}

.c30 .react-select__menu .react-select__menu-list::-webkit-scrollbar-thumb {
  background: rgba(255,255,255,0.13);
  border-radius: 4px;
}

.c30 .react-select__indicator-separator {
  display: none;
}

.c30 .react-select__loading-indicator {
  display: none;
}

.c30 .react-select--is-disabled,
.c30 .react-select__control--is-disabled {
  color: rgba(255,255,255,0.36);
  border: 1px solid rgba(255,255,255,0.36);
}

.c30 .react-select--is-disabled .react-select__single-value,
.c30 .react-select__control--is-disabled .react-select__single-value,
.c30 .react-select--is-disabled .react-select__placeholder,
.c30 .react-select__control--is-disabled .react-select__placeholder {
  color: rgba(255,255,255,0.36);
}

.c30 .react-select--is-disabled .react-select__indicator,
.c30 .react-select__control--is-disabled .react-select__indicator {
  color: rgba(255,255,255,0.36);
}

.c30 .react-select__input {
  color: #FFFFFF;
}

.c32 {
  box-sizing: border-box;
  max-width: 500px;
  padding: 8px;
  height: 150px;
  width: 100%;
  color: #FFFFFF;
  border: 1px solid;
  border-radius: 4px;
  border-color: rgba(255,255,255,0.54);
  outline: none;
  background: transparent;
}

.c32::placeholder {
  color: rgba(255,255,255,0.54);
}

.c32:hover,
.c32:focus,
.c32:active {
  border: 1px solid rgba(255,255,255,0.72);
}

.c15 {
  position: absolute;
  height: calc(100% - 24px);
  width: 2px;
  top: 0;
  left: 55px;
  border-left: 2px solid rgba(255,255,255,0.07);
}

.c2 {
  box-sizing: border-box;
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px rgba(0,0,0,0.14),0px 1px 3px rgba(0,0,0,0.12);
}

.c3 {
  box-sizing: border-box;
  padding: 16px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  display: flex;
  background: #344179;
}

.c37 {
  box-sizing: border-box;
  margin-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  border: 1px solid;
  border-radius: 2px;
  border-color: #222C59;
  display: flex;
  align-items: center;
  justify-content: space-between;
  background: rgba(255,255,255,0.07);
}

.c35 {
  box-sizing: border-box;
  margin-bottom: 16px;
  padding-bottom: 16px;
  border-bottom: 1px solid;
  display: flex;
  border-color: rgba(255,255,255,0.13);
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      width="100%"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <span
              class="c5"
              font-size="0"
              font-weight="bold"
              kind="warning"
              style="font-weight: bold;"
            >
              PENDING
            </span>
            <div
              class="c6"
            >
              <div
                class="c7"
                style="max-width: 120px;"
                title="Sam"
              >
                Sam
              </div>
              <div
                class="c8"
                style="flex-shrink: 0; white-space: nowrap;"
              >
                is requesting roles:
              </div>
              <div
                class="c9"
              >
                <div
                  class="c10"
                  kind="secondary"
                >
                  admin
                </div>
              </div>
              <div
                class="c11"
              >
                for 
                35 minutes
              </div>
            </div>
          </div>
          <div
            class="c12"
          >
            <button
              class="c13"
              kind="border"
              width="60px"
            >
              Delete
            </button>
          </div>
        </div>
        <div
          class="c14"
          style="position: relative;"
        >
          <div
            class="c15"
          />
          <div
            class="c16"
            style="position: relative;"
          >
            <div
              class="c17"
              style="display: flex;"
            >
              <span
                class="c18 icon icon-chevroncircledown"
                color="text.muted"
              >
                <svg
                  fill="currentColor"
                  height="26"
                  viewBox="0 0 24 24"
                  width="26"
                >
                  <path
                    d="M8.78033 9.96967C8.48744 9.67678 8.01256 9.67678 7.71967 9.96967C7.42678 10.2626 7.42678 10.7374 7.71967 11.0303L11.4697 14.7803C11.7626 15.0732 12.2374 15.0732 12.5303 14.7803L16.2803 11.0303C16.5732 10.7374 16.5732 10.2626 16.2803 9.96967C15.9874 9.67678 15.5126 9.67678 15.2197 9.96967L12 13.1893L8.78033 9.96967Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="c19"
            >
              <div
                class="c20"
                style="flex: 1 1 0px;"
              >
                Sam
              </div>
              <div
                class="c11"
              >
                submitted
                 this request 
                1 minute ago
              </div>
            </div>
          </div>
          <div
            class="c21"
            style="position: relative;"
          >
            <div
              class="c22"
            >
              <div
                class="c20"
              >
                Sam
              </div>
              <div
                class="c23"
              >
                1 minute ago
              </div>
            </div>
            <div
              class="c24"
            >
              Testing long message format. I am requesting access for the developer role that i will be using to         commit fixes for our production application. I will need access for the         rest of the day to complete my changes.
            </div>
          </div>
          <div
            class="c25"
            style="position: relative;"
          >
            <div
              class="c26"
            >
              <div
                class="c27"
              >
                loggedInUsername
                 - add a review
              </div>
            </div>
            <div
              class="c24"
            >
              <div
                class="c28"
                width="200px"
              >
                <label
                  class="c29"
                  font-size="0"
                  for="select"
                >
                  Request Status
                </label>
                <div
                  class="c30"
                >
                  <div
                    class="react-select-container css-2b097c-container"
                  >
                    <div
                      class="react-select__control css-yk16xz-control"
                    >
                      <div
                        class="react-select__value-container css-g1d714-ValueContainer"
                      >
                        <div
                          class="react-select__placeholder css-1wa3eu0-placeholder"
                        >
                          Choose status
                        </div>
                        <input
                          aria-autocomplete="list"
                          class="css-62g3xt-dummyInput"
                          id="select"
                          readonly=""
                          tabindex="0"
                          value=""
                        />
                      </div>
                      <div
                        class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-6q0nyr-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="c31"
              >
                <label
                  class="c29"
                  font-size="0"
                >
                  Message
                </label>
                <textarea
                  class="c32"
                  color="text.main"
                  height="150px"
                  placeholder="Optional message..."
                  width="100%"
                />
              </div>
              <button
                class="c33"
                kind="primary"
              >
                Submit Review
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c34"
    >
      <div
        class="c35"
      >
        <div
          class="c36"
        >
          Reviewers
        </div>
      </div>
      <div
        class="c37"
      >
        <div
          class="c38"
          style="white-space: nowrap; max-width: 200px;"
          title="alice"
        >
          alice
        </div>
        <span
          class="c39"
          font-size="0"
          font-weight="bold"
          kind="warning"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c37"
      >
        <div
          class="c38"
          style="white-space: nowrap; max-width: 200px;"
          title="bob"
        >
          bob
        </div>
        <span
          class="c39"
          font-size="0"
          font-weight="bold"
          kind="warning"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c40"
      >
        <div
          class="c41"
          color="text.slightlyMuted"
        >
          Thresholds: 
          Default, Poplar, Admin
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`loaded pending search based request state 1`] = `
.c1 {
  box-sizing: border-box;
  max-width: 860px;
  min-width: 515px;
  margin-right: 32px;
  width: 100%;
  flex: 1 1 auto;
}

.c9 {
  box-sizing: border-box;
}

.c14 {
  box-sizing: border-box;
  padding: 24px;
  padding-top: 0px;
  background-color: #222C59;
  border-bottom-right-radius: 4px;
  border-bottom-left-radius: 4px;
}

.c17 {
  box-sizing: border-box;
  margin-left: 16px;
  margin-right: 8px;
  padding: 3px;
  background-color: #344179;
  border-radius: 50%;
}

.c21 {
  box-sizing: border-box;
  margin-top: 16px;
  border: 1px solid;
  border-color: #0C143D;
}

.c24 {
  box-sizing: border-box;
  padding: 16px;
  background-color: #344179;
}

.c28 {
  box-sizing: border-box;
  margin-top: 48px;
  border: 1px solid;
  border-color: #0C143D;
}

.c29 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  background-color: #0C143D;
}

.c31 {
  box-sizing: border-box;
  margin-bottom: 24px;
  width: 200px;
}

.c34 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c37 {
  box-sizing: border-box;
  min-width: 120px;
  flex: 0 1 260px;
}

.c43 {
  box-sizing: border-box;
  margin-left: 4px;
  margin-top: 16px;
}

.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  margin-left: 16px;
  width: 60px;
}

.c13:hover,
.c13:focus {
  background: rgba(255,255,255,0.07);
}

.c13:active {
  background: rgba(255,255,255,0.13);
}

.c13:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c36 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c36:hover,
.c36:focus {
  background: #B29DFF;
}

.c36:active {
  background: #C5B6FF;
}

.c36:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 8px;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
}

.c20 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 8px;
}

.c23 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 12px;
  line-height: 24px;
  margin: 0px;
}

.c30 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-right: 16px;
}

.c39 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-right: 8px;
}

.c41 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 16px;
}

.c44 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  color: rgba(255,255,255,0.72);
}

.c18 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: rgba(255,255,255,0.54);
}

.c10 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: rgba(255,255,255,0.07);
  color: #FFFFFF;
  font-weight: 400;
  margin-right: 4px;
}

.c32 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 4px;
}

.c5 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  margin-right: 16px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  background: #FFAB00;
  color: #000000;
  font-size: 10px;
}

.c42 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  padding: 0px;
  background: #FFAB00;
  color: #000000;
  width: 10px;
  font-size: 10px;
}

.c0 {
  box-sizing: border-box;
  display: flex;
}

.c4 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c6 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  flex-wrap: wrap;
}

.c12 {
  box-sizing: border-box;
  flex: 1;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  flex-wrap: wrap-reverse;
}

.c16 {
  box-sizing: border-box;
  padding-top: 16px;
  display: flex;
  align-items: center;
}

.c19 {
  box-sizing: border-box;
  display: flex;
  align-items: baseline;
}

.c22 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  background-color: #0C143D;
  display: flex;
  align-items: baseline;
}

.c26 {
  background: #222C59;
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
}

.c26 > thead > tr > th,
.c26 > tbody > tr > th,
.c26 > tfoot > tr > th,
.c26 > thead > tr > td,
.c26 > tbody > tr > td,
.c26 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c26 > thead > tr > th:first-child,
.c26 > tbody > tr > th:first-child,
.c26 > tfoot > tr > th:first-child,
.c26 > thead > tr > td:first-child,
.c26 > tbody > tr > td:first-child,
.c26 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c26 > thead > tr > th:last-child,
.c26 > tbody > tr > th:last-child,
.c26 > tfoot > tr > th:last-child,
.c26 > thead > tr > td:last-child,
.c26 > tbody > tr > td:last-child,
.c26 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c26 > tbody > tr > td {
  vertical-align: middle;
}

.c26 > thead > tr > th {
  background: rgba(255,255,255,0.07);
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c26 > thead > tr > th svg {
  height: 12px;
}

.c26 > tbody > tr > td {
  color: #FFFFFF;
  line-height: 16px;
}

.c26 tbody tr {
  border-bottom: 1px solid rgb(49,58,100);
}

.c26 tbody tr:hover {
  background-color: rgba(255,255,255,0.07);
}

.c33 .react-select-container {
  box-sizing: border-box;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: #FFFFFF;
  background-color: transparent;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c33 .react-select__control {
  outline: none;
  min-height: 40px;
  height: fit-content;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  background-color: transparent;
  box-shadow: none;
}

.c33 .react-select__control .react-select__dropdown-indicator {
  color: rgba(255,255,255,0.54);
}

.c33 .react-select__control:hover,
.c33 .react-select__control:focus,
.c33 .react-select__control:active {
  border: 1px solid rgba(255,255,255,0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c33 .react-select__control:hover .react-select__dropdown-indicator,
.c33 .react-select__control:focus .react-select__dropdown-indicator,
.c33 .react-select__control:active .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c33 .react-select__control .react-select__indicator:hover,
.c33 .react-select__control .react-select__dropdown-indicator:hover,
.c33 .react-select__control .react-select__indicator:focus,
.c33 .react-select__control .react-select__dropdown-indicator:focus,
.c33 .react-select__control .react-select__indicator:active,
.c33 .react-select__control .react-select__dropdown-indicator:active {
  color: #FFFFFF;
}

.c33 .react-select__control--is-focused {
  border-color: rgba(255,255,255,0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c33 .react-select__control--is-focused .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c33 .react-select__single-value {
  color: #FFFFFF;
}

.c33 .react-select__placeholder {
  color: rgba(255,255,255,0.54);
}

.c33 .react-select__multi-value {
  background-color: rgba(255,255,255,0.13);
}

.c33 .react-select__multi-value .react-select__multi-value__label {
  color: #FFFFFF;
  padding: 0 6px;
}

.c33 .react-select__multi-value .react-select__multi-value__remove {
  color: #FFFFFF;
}

.c33 .react-select__multi-value .react-select__multi-value__remove:hover {
  background-color: rgba(255,255,255,0.07);
  color: #FF6257;
}

.c33 .react-select__option:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c33 .react-select__option--is-focused {
  background-color: rgba(255,255,255,0.07);
}

.c33 .react-select__option--is-focused:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c33 .react-select__option--is-selected {
  background-color: rgba(255,255,255,0.13);
  color: inherit;
  font-weight: 500;
}

.c33 .react-select__option--is-selected:hover {
  background-color: rgba(255,255,255,0.13);
}

.c33 .react-select__clear-indicator {
  color: rgba(255,255,255,0.72);
}

.c33 .react-select__clear-indicator:hover,
.c33 .react-select__clear-indicator:focus {
  background-color: rgba(255,255,255,0.07);
}

.c33 .react-select__clear-indicator:hover svg,
.c33 .react-select__clear-indicator:focus svg {
  color: #FF6257;
}

.c33 .react-select__menu {
  margin-top: 0px;
  background-color: #344179;
  box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);
}

.c33 .react-select__menu .react-select__menu-list::-webkit-scrollbar-thumb {
  background: rgba(255,255,255,0.13);
  border-radius: 4px;
}

.c33 .react-select__indicator-separator {
  display: none;
}

.c33 .react-select__loading-indicator {
  display: none;
}

.c33 .react-select--is-disabled,
.c33 .react-select__control--is-disabled {
  color: rgba(255,255,255,0.36);
  border: 1px solid rgba(255,255,255,0.36);
}

.c33 .react-select--is-disabled .react-select__single-value,
.c33 .react-select__control--is-disabled .react-select__single-value,
.c33 .react-select--is-disabled .react-select__placeholder,
.c33 .react-select__control--is-disabled .react-select__placeholder {
  color: rgba(255,255,255,0.36);
}

.c33 .react-select--is-disabled .react-select__indicator,
.c33 .react-select__control--is-disabled .react-select__indicator {
  color: rgba(255,255,255,0.36);
}

.c33 .react-select__input {
  color: #FFFFFF;
}

.c35 {
  box-sizing: border-box;
  max-width: 500px;
  padding: 8px;
  height: 150px;
  width: 100%;
  color: #FFFFFF;
  border: 1px solid;
  border-radius: 4px;
  border-color: rgba(255,255,255,0.54);
  outline: none;
  background: transparent;
}

.c35::placeholder {
  color: rgba(255,255,255,0.54);
}

.c35:hover,
.c35:focus,
.c35:active {
  border: 1px solid rgba(255,255,255,0.72);
}

.c15 {
  position: absolute;
  height: calc(100% - 24px);
  width: 2px;
  top: 0;
  left: 55px;
  border-left: 2px solid rgba(255,255,255,0.07);
}

.c27 {
  width: 90%;
}

.c27 > tbody > tr > td {
  vertical-align: middle;
}

.c2 {
  box-sizing: border-box;
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px rgba(0,0,0,0.14),0px 1px 3px rgba(0,0,0,0.12);
}

.c3 {
  box-sizing: border-box;
  padding: 16px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  display: flex;
  background: #344179;
}

.c25 {
  box-sizing: border-box;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 0px;
  padding-top: 0px;
  background-color: #344179;
  margin: 0 auto;
}

.c40 {
  box-sizing: border-box;
  margin-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  border: 1px solid;
  border-radius: 2px;
  border-color: #222C59;
  display: flex;
  align-items: center;
  justify-content: space-between;
  background: rgba(255,255,255,0.07);
}

.c38 {
  box-sizing: border-box;
  margin-bottom: 16px;
  padding-bottom: 16px;
  border-bottom: 1px solid;
  display: flex;
  border-color: rgba(255,255,255,0.13);
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      width="100%"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <span
              class="c5"
              font-size="0"
              font-weight="bold"
              kind="warning"
              style="font-weight: bold;"
            >
              PENDING
            </span>
            <div
              class="c6"
            >
              <div
                class="c7"
                style="max-width: 120px;"
                title="Sam"
              >
                Sam
              </div>
              <div
                class="c8"
                style="flex-shrink: 0; white-space: nowrap;"
              >
                is requesting roles:
              </div>
              <div
                class="c9"
              >
                <div
                  class="c10"
                  kind="secondary"
                >
                  test
                </div>
              </div>
              <div
                class="c11"
              >
                for 
                35 minutes
              </div>
            </div>
          </div>
          <div
            class="c12"
          >
            <button
              class="c13"
              kind="border"
              width="60px"
            >
              Delete
            </button>
          </div>
        </div>
        <div
          class="c14"
          style="position: relative;"
        >
          <div
            class="c15"
          />
          <div
            class="c16"
            style="position: relative;"
          >
            <div
              class="c17"
              style="display: flex;"
            >
              <span
                class="c18 icon icon-chevroncircledown"
                color="text.muted"
              >
                <svg
                  fill="currentColor"
                  height="26"
                  viewBox="0 0 24 24"
                  width="26"
                >
                  <path
                    d="M8.78033 9.96967C8.48744 9.67678 8.01256 9.67678 7.71967 9.96967C7.42678 10.2626 7.42678 10.7374 7.71967 11.0303L11.4697 14.7803C11.7626 15.0732 12.2374 15.0732 12.5303 14.7803L16.2803 11.0303C16.5732 10.7374 16.5732 10.2626 16.2803 9.96967C15.9874 9.67678 15.5126 9.67678 15.2197 9.96967L12 13.1893L8.78033 9.96967Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="c19"
            >
              <div
                class="c20"
                style="flex: 1 1 0px;"
              >
                Sam
              </div>
              <div
                class="c11"
              >
                submitted
                 this request 
                1 minute ago
              </div>
            </div>
          </div>
          <div
            class="c21"
            style="position: relative;"
          >
            <div
              class="c22"
            >
              <div
                class="c20"
              >
                Sam
              </div>
              <div
                class="c23"
              >
                1 minute ago
              </div>
            </div>
            <div
              class="c24"
            >
              Testing long message format. I am requesting access for the developer role that i will be using to         commit fixes for our production application. I will need access for the         rest of the day to complete my changes.
            </div>
            <div
              class="c25"
            >
              <table
                class="c26 c27"
              >
                <thead>
                  <tr>
                    <th
                      style="cursor: default;"
                    >
                      Cluster Name
                    </th>
                    <th
                      style="cursor: default;"
                    >
                      Requested Resource Kind
                    </th>
                    <th
                      style="cursor: default;"
                    >
                      Requested Resource ID
                    </th>
                    <th
                      style="cursor: default;"
                    >
                      Description
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td>
                      cluster-name
                    </td>
                    <td>
                      app
                    </td>
                    <td>
                      app-name
                    </td>
                    <td />
                  </tr>
                  <tr>
                    <td>
                      cluster-name
                    </td>
                    <td>
                      db
                    </td>
                    <td>
                      db-name
                    </td>
                    <td />
                  </tr>
                  <tr>
                    <td>
                      cluster-name
                    </td>
                    <td>
                      node
                    </td>
                    <td>
                      node-name
                    </td>
                    <td />
                  </tr>
                  <tr>
                    <td>
                      cluster-name
                    </td>
                    <td>
                      user_group
                    </td>
                    <td>
                      user-group-name
                    </td>
                    <td />
                  </tr>
                  <tr>
                    <td>
                      cluster-name
                    </td>
                    <td>
                      kube_cluster
                    </td>
                    <td>
                      kube-cluster-name
                    </td>
                    <td />
                  </tr>
                  <tr>
                    <td>
                      cluster-name
                    </td>
                    <td>
                      windows_desktop
                    </td>
                    <td>
                      windows-desktop-name
                    </td>
                    <td />
                  </tr>
                  <tr>
                    <td>
                      cluster-name
                    </td>
                    <td>
                      app
                    </td>
                    <td>
                      raw-id
                    </td>
                    <td>
                      Some Friendly Name
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
          <div
            class="c28"
            style="position: relative;"
          >
            <div
              class="c29"
            >
              <div
                class="c30"
              >
                loggedInUsername
                 - add a review
              </div>
            </div>
            <div
              class="c24"
            >
              <div
                class="c31"
                width="200px"
              >
                <label
                  class="c32"
                  font-size="0"
                  for="select"
                >
                  Request Status
                </label>
                <div
                  class="c33"
                >
                  <div
                    class="react-select-container css-2b097c-container"
                  >
                    <div
                      class="react-select__control css-yk16xz-control"
                    >
                      <div
                        class="react-select__value-container css-g1d714-ValueContainer"
                      >
                        <div
                          class="react-select__placeholder css-1wa3eu0-placeholder"
                        >
                          Choose status
                        </div>
                        <input
                          aria-autocomplete="list"
                          class="css-62g3xt-dummyInput"
                          id="select"
                          readonly=""
                          tabindex="0"
                          value=""
                        />
                      </div>
                      <div
                        class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-6q0nyr-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="c34"
              >
                <label
                  class="c32"
                  font-size="0"
                >
                  Message
                </label>
                <textarea
                  class="c35"
                  color="text.main"
                  height="150px"
                  placeholder="Optional message..."
                  width="100%"
                />
              </div>
              <button
                class="c36"
                kind="primary"
              >
                Submit Review
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c37"
    >
      <div
        class="c38"
      >
        <div
          class="c39"
        >
          Reviewers
        </div>
      </div>
      <div
        class="c40"
      >
        <div
          class="c41"
          style="white-space: nowrap; max-width: 200px;"
          title="alice"
        >
          alice
        </div>
        <span
          class="c42"
          font-size="0"
          font-weight="bold"
          kind="warning"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c40"
      >
        <div
          class="c41"
          style="white-space: nowrap; max-width: 200px;"
          title="bob"
        >
          bob
        </div>
        <span
          class="c42"
          font-size="0"
          font-weight="bold"
          kind="warning"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c43"
      >
        <div
          class="c44"
          color="text.slightlyMuted"
        >
          Thresholds: 
          Default, Poplar, Admin
        </div>
      </div>
    </div>
  </div>
</div>
`;
